# crust_chat

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/models/: chat_ollama.rs  mod.rs
src/server/mcp/: main.rs
src/services/: chat.rs
src/tools/: base_tool.rs  mod.rs  opensearch_knowledge_base.rs  search_code.rs  tool_structs.rs  web_search.rs
