[package]
name = "cli_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
mime_guess = "2.0.5"
reqwest = { version = "0.12", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
#[package]
entrypoints = [
    // Server entrypoint
    {
        name = "web",
        path = "/",
        route = "index.html",
        package = "server",
        run = true,
    },
    // CLI tool entrypoint
    {
        name = "cli",
        path = "/cli",
        route = "/help",
        package = "cli_tool",
        run = true,
    }
]

[profile dev]
debug = false
